# prompt-training

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  agent_tools.py  benchmark.py  gaia_scorer.py  inverse.py  pyproject.toml
analysis/: metrics.md  temporal-drift.md
archive/: v2.7.9-monolith.md
docs/checkpoints/: CHECKPOINT_01.md  CHECKPOINT_02_before_threshold_edit.md  CHECKPOINT_03_pilot_complete_with_bottleneck_finding.md  CHECKPOINT_04_phase_8_0_pipeline_restructure.md  CHECKPOINT_05_phase_8_0_pilot_complete_phase_8_1_scoped.md  CHECKPOINT_06_phase_8_1_a_complete.md  CHECKPOINT_07_phase_8_1_a_plus_1_complete.md
docs/reviews/: PHASE_6B_REVIEW.md
implementation/: agent-tools.md  benchmark.md  caching.md  checklist.md  file-layout.md  gaia-integration.md  inverse.md  react-loop.md
operations/: cost-monitoring.md  experiment-rules.md  failure-modes.md  reproducibility.md  rerun-budget.md
roadmap/: deferred.md  related-work.md  v0-v1-plan.md
spec/: hypothesis.md  loop-detection.md  measurement.md  termination-taxonomy.md  token-budget.md  trace.md
