[project]
name = "prompt-training"
version = "2.8.1"
description = "Inverse model pre-processing reduces agent loops: a semantic entropy measurement framework on GAIA"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",  # client lib for Together AI's OpenAI-compatible embeddings endpoint
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.14.0",
    "tavily-python>=0.3.0",
    "huggingface_hub>=0.20.0",
]

[project.scripts]
prompt-training = "benchmark:main"

[tool.setuptools]
py-modules = ["benchmark", "inverse", "agent_tools", "gaia_scorer"]
